# tee-mo

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  FLASHCARDS.md  GEMINI.md  MANIFEST.json  MIGRATION_CLEARGATE.md  MIGRATION_PORT_MAP.md  README.md  package-lock.json  package.json  refactor.py
backend/: .env.example  README.md  pyproject.toml
backend/app/: main.py
backend/app/agents/: __init__.py  agent.py
backend/app/api/: deps.py
backend/app/core/: config.py  db.py  encryption.py  keys.py  logging_config.py  security.py  slack.py  url_safety.py
backend/app/models/: key.py  (+6 more)
backend/tests/: test_access_log.py  test_agent_factory.py  test_auth_routes.py  test_automation_executor.py  test_automation_migration.py  test_automation_service.py  test_automation_tools.py  test_automations_routes.py  test_channel_binding.py  test_channel_enrichment.py  test_citation_collector.py  test_config_google.py  test_document_service.py  test_drive_oauth.py  test_drive_service.py  test_drive_sync_cron.py  test_e2e_agent_live.py  test_e2e_agent_tools.py  test_encryption.py  test_health.py  test_health_db.py  test_key_resolvers.py  test_key_routes.py  test_knowledge_routes.py  test_logging_config.py  test_production_scenarios.py  test_read_document.py  test_read_drive_file.py  test_scan_service.py  test_security.py  test_skill_service.py  test_slack_blocks.py  test_slack_config.py  test_slack_dispatch.py  test_slack_dispatch_citation_kwargs.py  test_slack_events_signed.py  test_slack_events_stub.py  test_slack_install.py  test_slack_oauth_callback.py  test_slack_teams_list.py  (+11 more)
(+782 files in other folders)
